# Hive-Chat

./: .dockerignore  .env.example  .gitignore  .prettierignore  CLAUDE.md  CONSOLIDATED-FINDINGS.md  Caddyfile  LICENSE  Makefile  README.md  V1-TEST-REPORT.md  docker-compose.demo.yml  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: launch.json
.github/workflows/: ci.yml  docker-publish.yml  integration.yml  loc.yml  release.yml
artifacts/: stress-results.json
cli/: go.mod
docs/: AGENTS.md  ARCHITECTURE-CURRENT.md  ARCHITECTURE-TARGET.md  ARCHITECTURE.md  DECISIONS.md  DEMO-ASSETS.md  DEMO-RUNBOOK.md  GIT-BEGINNER-CHECKLIST.md  HiveChat.md  INSTALL.md  KNOWN-ISSUES.md  OPERATIONS.md  PERFORMANCE.md  PROTOCOL.md  RELEASE-GATE.md  ROADMAP.md  RUNBOOKS.md  SELF-HOSTING.md  STREAMING.md  TASKS.md  V1-IMPLEMENTATION.md
docs/plans/: 2026-03-08-cli-distribution.md
gateway/: .dockerignore  .formatter.exs  Dockerfile  mix.exs
gateway/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
prisma/: schema.prisma  seed.mjs
scripts/: ci-env-setup.sh  db-backup.sh  db-migrate-test.sh  db-restore.sh  regression-harness.ps1  setup.ps1  setup.sh  smoke-test.mjs  stress-harness.ps1  test-agent-connect.js  test-sdk.py
sdk/python/: Dockerfile  README.md  pyproject.toml
sdk/python/examples/: echo_agent.py  llm_agent.py  multi_agent.py
sdk/python/tavok/: __init__.py  agent.py  auth.py  rest.py  stream.py  types.py  webhook.py  ws.py
streaming/: Dockerfile  go.mod  go.sum
(+126 files in other folders)
