[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tavok-sdk"
version = "0.1.0"
description = "Python SDK for building Tavok agents — AI-native chat with token streaming"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
authors = [
    { name = "Tavok Contributors" },
]
keywords = ["tavok", "agent", "chat", "streaming", "ai", "websocket"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "websockets>=12.0,<15.0",
    "httpx>=0.25.0,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
anthropic = [
    "anthropic>=0.40",
]
openai = [
    "openai>=1.0",
]

[project.urls]
Homepage = "https://github.com/tavok-chat/tavok"
Documentation = "https://github.com/tavok-chat/tavok/tree/main/sdk/python"
Repository = "https://github.com/tavok-chat/tavok"

[tool.hatch.build.targets.wheel]
packages = ["tavok"]
